@@ -1,3 +1,8 @@
+2006-01-20  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
+
+	PR ada/24533
+	* s-osinte-linux-hppa.ads: Reduce alignment of atomic_lock_t to 8.
+
 2005-12-28  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
 
 	* s-osinte-linux-hppa.ads: Correct alignment of atomic_lock_t.
